# Cosmic-Loop

./: .env.example  ENV_LOCAL_SETUP.md  ENV_SETUP.md  PRODUCTION_ENV_TEMPLATE.md  README.md  TOKEN_CREATION_ERROR.md  architecture.md  check-env-vars.js  check-env.js  check-perplexity-models.js  check-token-environment.js  close-substreams-reference.sh  cspell.json  netlify.toml  next.config.mjs  package-lock.json  package.json  production-build.sh  setup-dev-environment.js  setup-local-env.sh  setup-solana-dev.sh  tailwind.config.js  test-api-setup.js  test-perplexity-sonar.js  tsconfig.json  vercel.json
Documentation/: README.md  ai-assistant.md  getting-started.md  layerzero-v2-integration-guide.md  layerzero-v2-integration.md  overview.md  perplexity-integration.md  project-overview.md  solana-program-technical-guide.md
Documentation/api-reference/: README.md  (+1 more)
backend/: README.md  index.js  package.json
docs/: README.md  ai-assistant.md  ai-integration-article.md  getting-started.md
gateway/: .env.example  README.md  package-lock.json  package.json  setup-env.sh  start-gateway.sh  start-with-env.sh  test-gateway.sh
solana-program/: .gitignore  Cargo.toml  README.md
solana-program/instructions/: mod.rs  process_response.rs  query_data.rs  receive_message.rs
solana-program/src/: error.rs  layerzero.rs  lib.rs  state.rs
solana-program/src/instructions/: mod.rs  process_response.rs  query_data.rs  receive_message.rs  send_message.rs
solana-program/tests/: layerzero_integration_test.ts  package.json  tsconfig.json
src/: server.ts
substreams/: Cargo.toml  README.md  build.rs  substreams.yaml
substreams/proto/: bridge.proto  marketplace.proto  nft.proto
substreams/src/: bridge.rs  lib.rs  marketplace.rs  nft.rs  utils.rs
substreams/src/pb/: bridge.v1.rs  marketplace.v1.rs  mod.rs  nft.v1.rs
(+167 files in other folders)
