[package]
name = "solana-openapi"
version = "0.1.0"
edition = "2021"
description = "Solana OpenAPI LayerZero V2 Integration"
authors = ["Solana OpenAPI Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.2.1"
borsh = "0.10.3"
thiserror = "1.0.43"
num-traits = "0.2"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
sha2 = "0.10.8"
bs58 = "0.5.0"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
solana-cli-config = "1.16.0"
