[package]
name = "cosmic-loop-solana-substreams"
version = "0.1.0"
edition = "2021"
description = "Cosmic Loop Solana Substreams for indexing NFT, bridging, and marketplace activities"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-solana = "0.2"
substreams-entity-change = "1.3"
prost = "0.11"
prost-types = "0.11"
base64 = "0.13"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbjson-types = "0.5"
hex = "0.4"
borsh = "0.10"
bytes = "1.4"
chrono = "0.4"

[build-dependencies]
prost-build = "0.11"
