[package]
name = "solana-openapi-substreams"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_openapi_substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-solana = "0.3.0"
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
borsh = "0.10.3"
bs58 = "0.4.0"
num-traits = "0.2"
thiserror = "1.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
